# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "cis02-rentable-nft-4907"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"

[features]
default = ["std"]
std = ["concordium-std/std", "concordium-cis2/std"]

[dependencies]
concordium-std = { version = "4.0.0", default-features = false }
concordium-cis2 = { version = "1.2.0", default-features = false }
# concordium-std = "4.0.0"
# concordium-cis2 = "1.2.0"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"
